# simple-dftd3

./: .EDISP  .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  coord.xyz  docs.md  ford.md  fpm.toml  index.html  meson.build  meson_options.txt  modules.json  run.sh  s-dftd3.wrap  search.html  test_mod.c
.github/workflows/: build.yml  codeql.yml  docs.yml  fortran-build.yml  wheel.yml
app/: CMakeLists.txt  cli.f90  driver.f90  help.f90  main.f90  meson.build
assets/: parameters.toml
assets/ci/: build-env.yaml  python-env-alt.yaml  python-env.yaml  wheel-req.txt
config/: CMakeLists.txt  install-mod.py  meson.build  template.cmake
config/cmake/: Findcustom-blas.cmake  Findmctc-lib.cmake  Findmstore.cmake  Findtoml-f.cmake  s-dftd3-utils.cmake
doc/: comparison.rst  conf.py  environment.yml  index.rst  installation.rst  paper.md  requirements.txt
doc/_static/: references.bib
doc/api/: c.rst  fortran.rst  index.rst  python.rst
doc/guide/: index.rst  minimal-example.rst  periodic-cutoffs.rst
doc/tutorial/: first-steps-cli.rst  index.rst  using-3c-methods.ipynb  using-3c-methods.rst
include/: s-dftd3.h  version.fh
interface/: argument_count_interface.html  argument_list.html  dispersion_interface.html  get_argument_interface.html  get_covalent_rad.html  get_dispersion.html  get_r4r2_val.html  get_vdw_rad.html  len.html  pairwise_dispersion_interface.html
lists/: absint.html  files.html  modules.html  procedures.html  types.html
man/: s-dftd3.1.adoc
module/: dftd3.html  dftd3_api.html  dftd3_app_argument.html  dftd3_app_cli.html  dftd3_app_driver.html  dftd3_app_help.html  dftd3_app_toml.html  dftd3_citation.html  dftd3_cutoff.html  dftd3_damping.html  dftd3_damping_atm.html  dftd3_damping_cso.html  dftd3_damping_mzero.html  dftd3_damping_optimizedpower.html  dftd3_damping_rational.html  dftd3_damping_zero.html  dftd3_data.html  dftd3_data_covrad.html  dftd3_data_r4r2.html  dftd3_data_vdwrad.html  dftd3_disp.html  dftd3_gcp.html  dftd3_gcp_param.html  dftd3_model.html  dftd3_ncoord.html  dftd3_output.html  dftd3_param.html  dftd3_reference.html  dftd3_utils.html  dftd3_version.html
proc/: add_coordination_number_derivs.html  app_driver.html  ascii_atomic_radii.html  ascii_atomic_references.html  ascii_damping_param.html  ascii_energy_atom.html  ascii_gcp_param.html  ascii_pairwise.html  ascii_results.html  ascii_system_properties.html  author_name.html  check_error_api.html  crossproduct.html  delete_error_api.html  delete_gcp_api.html  delete_model_api.html  delete_param_api.html  delete_structure_api.html  format_bibtex.html  get_arguments.html  get_atm_dispersion.html  get_atm_dispersion_derivs.html  get_atm_dispersion_energy.html  get_atm_pairwise_dispersion.html  get_c6.html  get_citation.html  get_coordination_number.html  get_counterpoise_api.html  get_cso_damping.html  get_dftd3_version.html  get_dispersion2.html  get_dispersion2~2.html  get_dispersion2~3.html  get_dispersion2~4.html  get_dispersion2~5.html  get_dispersion3.html  get_dispersion3~2.html  get_dispersion3~3.html  get_dispersion3~4.html  get_dispersion3~5.html  (+75 more)
program/: dftd3_main.html
python/: README.rst  build.py  ffibuilder.py  meson.build  meson_options.txt  mesonpep517.toml  pyproject.toml  setup.cfg  setup.py
python/dftd3/: __init__.py  ase.py  interface.py  libdftd3.py  library.py  meson.build  parameters.py  pyscf.py  qcschema.py  test_ase.py  test_interface.py  test_libdftd3.py  test_library.py  test_parameters.py  test_pyscf.py  test_qcschema.py
sourcefile/: api.f90.html  argument.f90.html  atm.f90.html  citation.f90.html  cli.f90.html  covrad.f90.html  cso.f90.html  cutoff.f90.html  damping.f90.html  data.f90.html  dftd3.f90.html  disp.f90.html  driver.f90.html  gcp.f90.html  help.f90.html  main.f90.html  model.f90.html  mzero.f90.html  ncoord.f90.html  optimizedpower.f90.html  output.f90.html  param.f90.html  param.f90~2.html  r4r2.f90.html  rational.f90.html  toml.f90.html  utils.f90.html  vdwrad.f90.html  version.f90.html  zero.f90.html
src/: api.f90  atm.f90  citation.f90  cli.f90  coordination_number.f90  cso.f90  cutoff.f90  dftd3.f90  disp.f90  driver.f90  gcp.f90  header.f90  help.f90  main_dftd.f90  model.f90  mzero.f90  ncoord.f90  optimizedpower.f90  param.f90  program_dftd.f90  rational.f90  reference.f90  toml.f90  version.f90  zero.f90
src/dftd3/: CMakeLists.txt  api.f90  blas.F90  citation.f90  cutoff.f90  damping.f90  data.f90  disp.f90  gcp.f90  meson.build  model.f90  ncoord.f90  output.f90  param.f90  reference.f90  version.f90
src/dftd3/damping/: atm.f90  (+6 more)
src/io/: molecule_reader.f90
src/param/: atomic_units.f90  constants.f90  covalent_radii.f90  damping_parameters.f90  dftd3_parameters.f90  pse.f90  r4r2_expectation_values.f90  units.f90
src/typedef/: argparser.f90  damping_parameters.f90  dynamic_neighbourlist.f90  environment.f90  latp_generator.f90  molecule.f90  options.f90  results.f90
src/utils/: file_utils.f90  periodic.f90  symbols.f90
subprojects/: .gitignore  CMakeLists.txt  mctc-lib.wrap  mstore.wrap
test/: main.f90  meson.build  test_dftd3.f90  test_model.f90  test_ncoord.f90  test_param.f90  test_periodic.f90
test/api/: api-test.c  cpp-test.cpp  meson.build
test/unit/: CMakeLists.txt  main.f90  meson.build  test_dftd3.f90  test_gcp.f90  test_model.f90  test_ncoord.f90  test_pairwise.f90  test_param.f90  test_periodic.f90
test/validation/: 01-energy-d3-bj.resp  01-energy.json  02-energy-d3-zero.resp  02-gradient.json  07-gradient-d3-zero.resp  16-db-d3-bj.json  18-db-d3-bjm.json  19-db-d3-zerom.json  20-db-d3-op.json  meson.build  tester.py
type/: app_config.html  argument_list.html  citation_type.html  cso_damping_param.html  d3_model.html  d3_param.html  damping_param.html  gcp_config.html  gcp_param.html  mzero_damping_param.html  optimizedpower_damping_param.html  param_config.html  param_database.html  rational_damping_param.html  realspace_cutoff.html  run_config.html  vp_error.html  vp_gcp.html  vp_model.html  vp_param.html  vp_structure.html  zero_damping_param.html
(+10 files in other folders)
