[metadata]
name = dftd3-python
version = 0.4.0
desciption = Python API of the DFT-D3 project
long_desciption = file: README.rst
long_description_content_type = text/x-rst
author = Sebastian Ehlert
author_email = awvwgk@gmail.com
url = https://github.com/awvwgk/simple-dftd3
license = LGPL-3.0-or-later
license_files =
    COPYING
    COPYING.LESSER
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Fortran
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
setup_requires =
    pkgconfig
install_requires =
    cffi
    numpy
tests_require =
    pytest
    pytest-cov
python_requires = >=3.6

[coverage:run]
omit =
    */test_*.py

[aliases]
test=pytest
