[metadata]
name = dftd3
version = 1.1.1
desciption = Python API of the DFT-D3 project
long_desciption = file: README.rst
long_description_content_type = text/x-rst
author = Sebastian Ehlert
author_email = awvwgk@gmail.com
url = https://github.com/dftd3/simple-dftd3
license = LGPL-3.0-or-later
license_files =
    COPYING
    COPYING.LESSER
classifiers =
    Development Status :: 5 - Production
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Programming Language :: Fortran
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
install_requires =
    cffi
    numpy
tests_require =
    pytest
    pytest-cov
    ase
    pyscf
    qcelemental
python_requires = >=3.8

[options.extras_require]
ase = ase
pyscf = pyscf
parameters = tomli
qcschema = qcelemental

[coverage:run]
omit =
    */test_*.py

[aliases]
test=pytest
